[gd_scene load_steps=6 format=3 uid="uid://bixh7odyximcb"]

[ext_resource type="Theme" uid="uid://b7l5vs3ivsapn" path="res://ui/battle_preparation/unit_panel_not_selected.tres" id="1_ouvs0"]
[ext_resource type="Script" path="res://ui/battle_preparation/convoy_item_panel_container.gd" id="2_2qk5x"]
[ext_resource type="Texture2D" uid="uid://dnckbxrnna2l1" path="res://resources/sprites/items/hand_axe.png" id="3_xjkbn"]

[sub_resource type="Theme" id="Theme_s1kxt"]
default_font_size = 24

[sub_resource type="Theme" id="Theme_w0oe3"]
default_font_size = 24

[node name="UnitArmyPanelContainer" type="PanelContainer"]
custom_minimum_size = Vector2(300, 50)
offset_right = 300.0
offset_bottom = 50.0
theme = ExtResource("1_ouvs0")
script = ExtResource("2_2qk5x")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_right = 5

[node name="Panel" type="Panel" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Panel"]
layout_mode = 2
offset_right = 300.0
offset_bottom = 50.0
theme_override_constants/separation = 60

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Panel/HBoxContainer"]
layout_mode = 2
mouse_filter = 2
alignment = 1

[node name="ItemIcon" type="TextureRect" parent="MarginContainer/Panel/HBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(35, 35)
layout_mode = 2
texture = ExtResource("3_xjkbn")
stretch_mode = 3

[node name="ItemNameLabel" type="Label" parent="MarginContainer/Panel/HBoxContainer/HBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_s1kxt")
text = "Hand Axe"

[node name="UsesLabel" type="Label" parent="MarginContainer/Panel/HBoxContainer"]
modulate = Color(0.509804, 0.509804, 0.509804, 1)
layout_mode = 2
theme = SubResource("Theme_w0oe3")
text = "35"

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
